# qr-print-helper

./: .copier-answers.yml  AGENTS.md  README.md  RELEASE_README.md  cli.py  cliff.toml  gui.py  pyproject.toml  requirements.txt
.github/: changelog-config.json
.github/workflows/: build-test.yml  deploy.yml  pr-label-check.yml  tag.yml
assets/: installer.iss
core/: constants.py  layout.py  models.py
scripts/: pre-push  setup-hooks.sh
tests/: test_cli.py  test_layout.py  test_models.py
