[project]
name = "qr-print-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pillow>=12.1.0",
    "reportlab>=4.4.9",
]

[project.scripts]
qr-print-helper = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
packages = ["core"]
