[project]
name = "qr-print-helper"
version = "1.0.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.1.0",
    "reportlab>=4.4.9",
]

[project.optional-dependencies]
build = [
    "nuitka",
    "zstandard",
]

[project.scripts]
qr-print-helper = "cli:main"

[project.gui-scripts]
qr-print-helper-gui = "gui:main"

[tool.setuptools]
py-modules = ["cli", "gui"]
packages = ["core"]
