[project]
name = "qr-print-helper"
version = "1.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.2.0",
    "reportlab>=4.4.9",
]

[project.optional-dependencies]
build = [
    "nuitka",
    "zstandard",
    "imageio",
]

[project.scripts]
qr-print-helper = "cli:main"

[project.gui-scripts]
qr-print-helper-gui = "gui:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.setuptools]
py-modules = ["cli", "gui"]
packages = ["core"]

[dependency-groups]
dev = [
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
